Backport 1.3.0 to Minecraft 1.20.1